--- a/EmployeeWebApplication/WebContent/WEB-INF/web.xml
+++ b/EmployeeWebApplication/WebContent/WEB-INF/web.xml
@@ -1,30 +1,76 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
-  <display-name>EmployeeWebApplication</display-name>
-  <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
-  </welcome-file-list>
-  
-   <servlet>  
-    <servlet-name>MyHttpTestServlet</servlet-name>  
-    <servlet-class>TestServlet</servlet-class>  
-  </servlet>  
-  <servlet-mapping>  
-    <servlet-name>MyHttpTestServlet</servlet-name>  
-    <url-pattern>/welcome</url-pattern>  
-  </servlet-mapping> 
-  
-   <servlet>
-      <servlet-name>Employee</servlet-name>
-      <servlet-class>EmployeeServlet</servlet-class>
-   </servlet>
-   <servlet-mapping>
-      <servlet-name>Employee</servlet-name>
-      <url-pattern>/employee-details</url-pattern>
-   </servlet-mapping>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://java.sun.com/xml/ns/javaee"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+	id="WebApp_ID" version="3.0">
+	<display-name>EmployeeWebApplication</display-name>
+	<servlet>
+		<servlet-name>Login</servlet-name>
+		<servlet-class>FirstServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>Login</servlet-name>
+		<url-pattern>/login</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>Welcome</servlet-name>
+		<servlet-class>WelcomeServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>Welcome</servlet-name>
+		<url-pattern>/servlet2</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>MyHttpTestServlet</servlet-name>
+		<servlet-class>TestServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>MyHttpTestServlet</servlet-name>
+		<url-pattern>/welcome</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>Employee</servlet-name>
+		<servlet-class>EmployeeServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>Employee</servlet-name>
+		<url-pattern>/employee-details</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>CreateCategory</servlet-name>
+		<servlet-class>CreateCategoryServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>CreateCategory</servlet-name>
+		<url-pattern>/create-category</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>RegisterEmployee</servlet-name>
+		<servlet-class>RegisterEmployeeServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>RegisterEmployee</servlet-name>
+		<url-pattern>/register</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>CreateLibrary</servlet-name>
+		<servlet-class>CreateLibraryServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>CreateLibrary</servlet-name>
+		<url-pattern>/create-libraryItem</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>ViewCategories</servlet-name>
+		<servlet-class>ViewCategoryServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>ViewCategories</servlet-name>
+		<url-pattern>/check</url-pattern>
+	</servlet-mapping>
+	
+	<welcome-file-list>
+		<welcome-file>login.html</welcome-file>
+	</welcome-file-list>
 </web-app>
